# puda-grafana

./: .env.example  .gitignore  Dockerfile  README.md  admin-token.json  compose.yml  pyproject.toml  start.sh  telegraf.conf  watcher.py
dashboards/: IMRE-pescador.json  IMRE.json  VIPSA.json  bears.json  biologic.json  command-log.json  first.json  hermes-first.json  hermes.json  ifim.json  imre-mof.json  joule_heater.json  machine-status.json  opentrons.json  puda-imre-mof.json  system-metrics.json  vipsa.json
provisioning/datasources/: influxdb.yaml
provisioning/mediamtx/: pescador.yml
provisioning/telegraf/: imre-mof.conf  imre-pescardo.conf
scripts/: init.sh  render-config.sh
