[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "puda-grafana-watcher"
version = "0.1.0"
description = "Watches puda machine telemetry and writes to InfluxDB for Grafana"
requires-python = ">=3.11"
dependencies = [
    "influxdb3-python>=0.8.0",
    "nats-py>=2.14.0",
]

[tool.setuptools]
py-modules = ["watcher"]
